--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -24,10 +24,12 @@ h1 {
 }
 
 #heroInfo {
+  align-items: center;
   display: flex;
-  justify-content: space-evenly;
-  width: 80%;
+  gap: 20px;
   margin-bottom: 30px;
+  justify-content: center;
+  width: 80%;
 }
 
 #online-portfolio {
@@ -41,18 +43,49 @@ h1 {
 .hero-photo {
   border-radius: 10px;
   height: 250px;
-  z-index: 10;
-  margin-right: 400px;
 }
 
 .about-me {
-  width: 400px;
-  margin-top: 60px;
-  margin-left: 200px;
+  width: 50%;
   font-size: 16px;
   background-color: black;
   border-radius: 10px;
-  padding: 30px 30px 30px 110px;
+  padding: 30px;
   color: white;
-  position: absolute;
+}
+
+#skills {
+  display: flex;
+  justify-content: center;
+  padding: 40px;
+}
+
+.skills-list {
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  list-style: none;
+
+  li {
+    background-color: #ccc;
+    border-radius: 5px;
+    display: block;
+    opacity: 0.8;
+    padding: 10px;
+
+    &:hover {
+      opacity: 1;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  #heroInfo {
+    flex-direction: column;
+  }
+
+  .about-me {
+    width: 100%;
+  }
 }
