--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -46,38 +46,13 @@ h1 {
 }
 
 .about-me {
-  width: 50%;
-  font-size: 16px;
   background-color: black;
   border-radius: 10px;
-  padding: 30px;
   color: white;
-}
-
-#skills {
-  display: flex;
-  justify-content: center;
+  font-size: 16px;
+  height: 250px;
   padding: 40px;
-}
-
-.skills-list {
-  align-items: center;
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  list-style: none;
-
-  li {
-    background-color: #ccc;
-    border-radius: 5px;
-    display: block;
-    opacity: 0.8;
-    padding: 10px;
-
-    &:hover {
-      opacity: 1;
-    }
-  }
+  width: 40%;
 }
 
 @media screen and (max-width: 768px) {
