--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -2,14 +2,6 @@ h1 {
   font-size: 2em;
 }
 
-#nav-links {
-  width: 70%;
-  display: flex;
-  justify-content: space-evenly;
-  letter-spacing: 2px;
-  font-size: 15px;
-}
-
 .hero {
   padding: 20px;
   display: flex;
@@ -46,12 +38,15 @@ h1 {
 }
 
 .about-me {
+  align-items: center;
   background-color: black;
   border-radius: 10px;
   color: white;
+  display: flex;
   font-size: 16px;
   height: 250px;
-  padding: 40px;
+  justify-content: center;
+  padding: 20px;
   width: 40%;
 }
 
@@ -61,6 +56,7 @@ h1 {
   }
 
   .about-me {
+    height: auto;
     width: 100%;
   }
 }
